--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   localstorage: ^4.0.0+1
   video_player: ^2.1.1
   qr_code_scanner: ^1.0.1
+  intl: ^0.17.0
+  downloads_path_provider_28: ^0.1.2
+  permission_handler: ^8.3.0
+  dio: ^4.0.4
+  sn_progress_dialog: ^1.1.3
 
 dev_dependencies:
   flutter_test:
