--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   permission_handler: ^8.3.0
   dio: ^4.0.4
   sn_progress_dialog: ^1.1.3
+  image_save: ^5.0.0
 
 dev_dependencies:
   flutter_test:
