--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,9 +5,10 @@
    <application
            android:requestLegacyExternalStorage="true"
            android:label="flutter_application_1"
-        android:name="${applicationName}"
-        android:usesCleartextTraffic="true"
-        android:icon="@mipmap/ic_launcher">
+           android:name="${applicationName}"
+           android:largeHeap="true"
+           android:usesCleartextTraffic="true"
+           android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:exported="true"
