--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,22 +31,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   localstorage: ^4.0.0+1
-  video_player: ^2.1.1
+  video_player: ^2.6.1
   qr_code_scanner: ^1.0.1
   intl: ^0.17.0
-  downloads_path_provider_28: ^0.1.2
   permission_handler: ^8.3.0
   dio: ^4.0.4
   sn_progress_dialog: ^1.1.3
   image_save: ^5.0.0
-
+  chewie: ^1.5.0
+  async: ^2.11.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
