--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,13 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   localstorage: ^4.0.0+1
-  video_player: ^2.6.1
   qr_code_scanner: ^1.0.1
   intl: ^0.17.0
   permission_handler: ^8.3.0
   dio: ^4.0.4
   sn_progress_dialog: ^1.1.3
   image_save: ^5.0.0
-  chewie: ^1.5.0
+  better_player: 0.0.83
   async: ^2.11.0
 dev_dependencies:
   flutter_test:
